--- a/app/src/main/res/layout/activity_book.xml
+++ b/app/src/main/res/layout/activity_book.xml
@@ -7,7 +7,7 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
-        android:layout_height="420dp"
+        android:layout_height="@dimen/app_bar_layout_height"
         android:fitsSystemWindows="true"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
@@ -22,15 +22,27 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:maxLines="3">
 
-            <ImageView
-                android:id="@+id/profile_id"
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/books"
-                android:fitsSystemWindows="true"
-                android:scaleType="fitCenter"
-                app:layout_collapseMode="parallax" />
+                android:fitsSystemWindows="true">
 
+                <ImageView
+                    android:id="@+id/iv_book_cover"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/books"
+                    android:fitsSystemWindows="true"
+                    android:scaleType="fitCenter"
+                    app:layout_collapseMode="parallax" />
+
+                <View
+                    android:id="@+id/gradient"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/gradient_cover_height"
+                    android:layout_gravity="bottom"
+                    android:background="@drawable/gradient_shape" />
+            </FrameLayout>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -48,7 +60,7 @@
         android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#ffe5e5e5"
+        android:background="@color/cardview_background"
         android:clipToPadding="false"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
@@ -59,9 +71,14 @@
             android:paddingTop="10dp">
 
             <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/cv_overview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp">
+                android:layout_marginBottom="@dimen/single_book_card_bottom_margin"
+                android:layout_marginLeft="@dimen/def_margin"
+                android:layout_marginRight="@dimen/def_margin"
+                android:layout_marginTop="@dimen/def_margin"
+                android:elevation="8dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -70,83 +87,171 @@
                     android:padding="12dp">
 
                     <TextView
+                        android:id="@+id/tv_author_header"
+                        style="@style/cardViewHeaderText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Lorem ipsum"
-                        android:textSize="20sp" />
+                        android:text="@string/author" />
 
                     <TextView
+                        android:id="@+id/tv_author"
+                        style="@style/cardViewContentText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="asdasd"
-                        android:textSize="18sp" />
+                        android:text="Tomasz Lem" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="0.40dp"
+                        android:layout_marginBottom="6dp"
+                        android:layout_marginTop="6dp"
+                        android:background="#50303030" />
+
+                    <TextView
+                        android:id="@+id/tv_description_header"
+                        style="@style/cardViewHeaderText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/description" />
+
+                    <TextView
+                        android:id="@+id/tv_description"
+                        style="@style/cardViewContentText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Tomasz Lem w Awanturach na tle powszechnego ciążenia wspomina swego ojca. Dzięki licznym anegdotom i barwnie odmalowanym scenom z życia codziennego możemy na wybitnego pisarza spojrzeć w zupełnie nowy sposób. Stanisław Lem jawi się w tej książce nie tylko jako autor światowych bestsellerów, ale także jako zapalony narciarz, domorosły mechanik i konstruktor elektrycznych silników, niesforny łasuch, chowający za meblami papierki po cukierkach, a przede wszystkim jako ojciec." />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="0.40dp"
+                        android:layout_marginBottom="6dp"
+                        android:layout_marginTop="6dp"
+                        android:background="#50303030" />
+
+                    <TextView
+                        android:id="@+id/tv_genre_header"
+                        style="@style/cardViewHeaderText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/genre" />
+
+                    <TextView
+                        android:id="@+id/tv_genre"
+                        style="@style/cardViewContentText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Fikcja/sc-fi" />
 
                 </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/cv_owned_by"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/single_book_card_bottom_margin"
+                android:layout_marginLeft="@dimen/def_margin"
+                android:layout_marginRight="@dimen/def_margin"
+                android:layout_marginTop="@dimen/def_margin"
+                android:elevation="8dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:paddingLeft="12dp"
+                        android:paddingRight="12dp"
+                        android:paddingTop="8dp">
+
+                        <TextView
+                            style="@style/cardViewContentText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/added_by" />
+
+                        <TextView
+                            style="@style/nicknameOwnStyle"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="\@szyna55" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:paddingBottom="8dp"
+                        android:paddingLeft="12dp"
+                        android:paddingRight="12dp"
+                        android:paddingTop="8dp">
+
+                        <TextView
+                            style="@style/cardViewContentText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/owned_by" />
+
+                        <TextView
+                            style="@style/nicknameOwnStyle"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="\@kWeb24" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/cv_book_options"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-
-                >
+                android:layout_marginBottom="@dimen/def_margin"
+                android:layout_marginLeft="@dimen/def_margin"
+                android:layout_marginRight="@dimen/def_margin"
+                android:layout_marginTop="@dimen/def_margin"
+                android:elevation="8dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="12dp">
+                    android:orientation="vertical">
 
-                    <TextView
+                    <Button
+                        android:id="@+id/btn_edit_book"
+                        style="@style/single_book_btn_style2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Lorem ipsum"
-                        android:textSize="20sp" />
+                        android:drawableStart="@drawable/ic_settings_white_36dp"
+                        android:text="@string/btn_edit_desc_text" />
 
-                    <TextView
+                    <Button
+                        android:id="@+id/btn_load_pdf"
+                        style="@style/single_book_btn_style"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="asdasd"
-                        android:textSize="18sp" />
+                        android:drawableStart="@drawable/ic_added_book_white_36dp"
+                        android:text="@string/btn_load_pfd_text" />
 
                 </LinearLayout>
-            </android.support.v7.widget.CardView>
 
-            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-
-                >
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="12dp">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Lorem ipsum"
-                        android:textSize="20sp" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="asdasdsasdasdasasdasdsasdasdasasdasdsasdasdasasdasdsasdasdasasdasdsasdasdasasdasdsasdasdasasdasdsasdasdasasdasdsasdasdasasdasdsasdasdasasdasdsasdasdasasdasdsasdasdasasdasdsasdasdasasdasdsasdasdasasdasdsasdasdasasdasdsasdasdas"
-                        android:textSize="18sp" />
-
-                </LinearLayout>
             </android.support.v7.widget.CardView>
 
         </LinearLayout>
 
-
     </android.support.v4.widget.NestedScrollView>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/fab_add_to_wishlist"
         style="@style/FabStyle"
         app:layout_anchor="@id/app_bar_layout"
         app:layout_anchorGravity="bottom|right|end" />
