--- a/app/src/main/res/layout/book_row.xml
+++ b/app/src/main/res/layout/book_row.xml
@@ -4,50 +4,63 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+
     <android.support.v7.widget.CardView
-        android:id="@+id/card_view"
+        android:id="@+id/card_view_added_book"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginBottom="2dp"
         android:layout_marginLeft="@dimen/def_margin"
         android:layout_marginRight="@dimen/def_margin"
         android:layout_marginTop="@dimen/def_margin"
-        android:layout_marginBottom="2dp"
         android:elevation="2dp">
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+        <com.balysv.materialripple.MaterialRippleLayout
+            android:id="@+id/ripple"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:mrl_rippleColor="@color/colorPrimary"
+            app:mrl_rippleDelayClick="true">
 
-            <ImageView
-                android:id="@+id/iv_book_thumbnail"
-                android:layout_width="@dimen/book_thumbnail_width"
-                android:layout_height="@dimen/book_thumbnail_height"
-                android:layout_margin="@dimen/def_margin"
-                android:scaleType="fitXY"
-                app:srcCompat="@drawable/avatar" />
-
-            <TextView
-                android:id="@+id/tv_book_title"
+            <RelativeLayout
+                android:id="@+id/rl_book"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignTop="@+id/iv_book_thumbnail"
-                android:layout_marginEnd="@dimen/corner_margin"
-                android:layout_toEndOf="@+id/iv_book_thumbnail"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/tv_book_author"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="false"
-                android:layout_alignParentEnd="true"
-                android:layout_below="@+id/tv_book_title"
-                android:layout_marginEnd="@dimen/corner_margin"
-                android:layout_toEndOf="@+id/iv_book_thumbnail" />
+                <ImageView
+                    android:id="@+id/iv_book_thumbnail"
+                    android:layout_width="@dimen/book_thumbnail_width"
+                    android:layout_height="@dimen/book_thumbnail_height"
+                    android:layout_margin="@dimen/def_margin"
+                    android:scaleType="fitXY"
+                    android:transitionName="@string/transition_book_cover" />
 
-        </RelativeLayout>
+                <TextView
+                    android:id="@+id/tv_book_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignTop="@+id/iv_book_thumbnail"
+                    android:layout_marginEnd="@dimen/corner_margin"
+                    android:layout_toEndOf="@+id/iv_book_thumbnail"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tv_book_author"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="false"
+                    android:layout_alignParentEnd="true"
+                    android:layout_below="@+id/tv_book_title"
+                    android:layout_marginEnd="@dimen/corner_margin"
+                    android:layout_toEndOf="@+id/iv_book_thumbnail" />
+
+            </RelativeLayout>
+
+        </com.balysv.materialripple.MaterialRippleLayout>
+
     </android.support.v7.widget.CardView>
+
 </RelativeLayout>
