--- a/app/src/main/res/layout/activity_profile_settings.xml
+++ b/app/src/main/res/layout/activity_profile_settings.xml
@@ -10,91 +10,221 @@
     <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/cardview_background">
+        android:layout_height="match_parent">
 
         <include
             android:id="@+id/toolbar"
             layout="@layout/toolbar"/>
 
-
-        <android.support.v7.widget.CardView
+        <ScrollView
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/card_view_profile_address"
+            android:id="@+id/scroll_settings"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_below="@id/toolbar"
-            android:layout_marginBottom="2dp"
-            android:layout_marginLeft="@dimen/def_margin"
-            android:layout_marginRight="@dimen/def_margin"
-            android:layout_marginTop="@dimen/def_margin"
-            android:elevation="2dp">
+            android:layout_height="match_parent"
+            android:layout_below="@id/toolbar">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/tv_settings_header_address"
-                    android:text="Adres wysyłki"
-                    android:layout_marginTop="@dimen/def_margin"
-                    android:layout_marginLeft="@dimen/def_margin"
-                    android:layout_marginRight="@dimen/def_margin"
                     android:layout_width="match_parent"
-                    android:textSize="16sp"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/activity_vertical_margin"
+                    android:layout_marginRight="@dimen/activity_vertical_margin"
+                    android:text="@string/settings_header_address"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="18sp"
                     android:textStyle="bold"/>
 
                 <TextView
-                    android:layout_marginTop="@dimen/def_margin"
-                    android:layout_marginLeft="@dimen/def_margin"
-                    android:layout_marginRight="@dimen/def_margin"
-                    android:text="Nie musisz uzupełniać swoich danych jeśli tego nie chcesz. W takim przypadku, użytkownik chcący wysłać Ci książkę zostanie przekierowany do prywatnej rozmowy z Tobą na Wykopie."
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/activity_vertical_margin"
+                    android:layout_marginRight="@dimen/activity_vertical_margin"
+                    android:text="@string/settings_address_about"
+                    android:textSize="16sp"/>
 
-                <EditText
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/input_layout_fullname"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/et_settings_fullname"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/activity_vertical_margin"
+                        android:layout_marginRight="@dimen/activity_vertical_margin"
+                        android:layout_marginTop="@dimen/def_margin"
+                        android:hint="@string/settings_et_hint_fullname"
+                        android:maxLines="1"/>
+
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/input_layout_address"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/et_settings_address"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/activity_vertical_margin"
+                        android:layout_marginRight="@dimen/activity_vertical_margin"
+                        android:layout_marginTop="@dimen/def_margin"
+                        android:hint="@string/settings_et_hint_address"
+                        android:maxLines="1"/>
+
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/input_layout_postal_code"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/et_settings_postal_code"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/activity_vertical_margin"
+                        android:layout_marginRight="@dimen/activity_vertical_margin"
+                        android:layout_marginTop="@dimen/def_margin"
+                        android:hint="@string/settings_et_hint_postal_code"
+                        android:maxLines="1"/>
+
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/input_layout_city"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/et_settings_city"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/activity_vertical_margin"
+                        android:layout_marginRight="@dimen/activity_vertical_margin"
+                        android:layout_marginTop="@dimen/def_margin"
+                        android:hint="@string/settings_et_hint_city"
+                        android:maxLines="1"/>
+
+                </android.support.design.widget.TextInputLayout>
+
+                <Button
+                    android:id="@+id/btn_save_settings"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/activity_vertical_margin"
+                    android:layout_marginRight="@dimen/activity_vertical_margin"
+                    android:drawablePadding="4dp"
+                    android:drawableStart="@drawable/ic_done_white_24dp"
+                    android:text="@string/settings_btn_action_save"/>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.15dp"
                     android:layout_marginTop="@dimen/def_margin"
-                    android:layout_marginLeft="@dimen/def_margin"
-                    android:layout_marginRight="@dimen/def_margin"
-                    android:id="@+id/et_settings_fullname"
+                    android:background="@android:color/darker_gray"/>
+
+                <TextView
+                    android:id="@+id/tv_settings_header_notifications"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Imię i nazwisko"/>
-
-                <EditText
+                    android:layout_marginLeft="@dimen/activity_vertical_margin"
+                    android:layout_marginRight="@dimen/activity_vertical_margin"
                     android:layout_marginTop="@dimen/def_margin"
-                    android:layout_marginLeft="@dimen/def_margin"
-                    android:layout_marginRight="@dimen/def_margin"
-                    android:id="@+id/et_settings_address"
+                    android:text="@string/settings_header_notifications"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="18sp"
+                    android:textStyle="bold"/>
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Ulica, nr domu"/>
-
-                <EditText
+                    android:layout_marginLeft="@dimen/activity_vertical_margin"
+                    android:layout_marginRight="@dimen/activity_vertical_margin"
                     android:layout_marginTop="@dimen/def_margin"
-                    android:layout_marginLeft="@dimen/def_margin"
-                    android:layout_marginRight="@dimen/def_margin"
-                    android:id="@+id/et_settings_postal_code"
+                    android:gravity="start|end"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/settings_option_notification_email"
+                        android:textSize="16sp"/>
+
+                    <Switch
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Kod pocztowy"/>
-
-                <EditText
+                    android:layout_marginBottom="@dimen/def_margin"
+                    android:layout_marginLeft="@dimen/activity_vertical_margin"
+                    android:layout_marginRight="@dimen/activity_vertical_margin"
                     android:layout_marginTop="@dimen/def_margin"
-                    android:layout_marginLeft="@dimen/def_margin"
-                    android:layout_marginRight="@dimen/def_margin"
-                    android:id="@+id/et_settings_city"
+                    android:gravity="start|end"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/settings_option_notification_pw_wykop"
+                        android:textSize="16sp"/>
+
+                    <Switch
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0.15dp"
+                    android:layout_marginTop="@dimen/def_margin"
+                    android:background="@android:color/darker_gray"/>
+
+                <TextView
+                    android:id="@+id/tv_settings_header_account"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Miejscowość"/>
+                    android:layout_marginBottom="@dimen/def_margin"
+                    android:layout_marginLeft="@dimen/activity_vertical_margin"
+                    android:layout_marginRight="@dimen/activity_vertical_margin"
+                    android:layout_marginTop="@dimen/def_margin"
+                    android:text="@string/settings_header_account"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="18sp"
+                    android:textStyle="bold"/>
+
+                <Button
+                    android:id="@+id/btn_logout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="24dp"
+                    android:layout_marginLeft="@dimen/activity_vertical_margin"
+                    android:layout_marginRight="@dimen/activity_vertical_margin"
+                    android:layout_marginTop="@dimen/def_margin"
+                    android:drawablePadding="4dp"
+                    android:drawableStart="@drawable/ic_exit_to_app_white_24dp"
+                    android:text="@string/settings_btn_action_logout"/>
 
             </LinearLayout>
 
-        </android.support.v7.widget.CardView>
+        </ScrollView>
 
     </RelativeLayout>
 
